fixed background overflow

--- a/src/components/body/css/index.css
+++ b/src/components/body/css/index.css
@@ -1,30 +1,61 @@
+
+.row {
+  padding: 0 !important;
+  margin: 0 !important;
+  background-color: transparent;
+}
+
+.col {
+  background-color: transparent;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
 .container {
     font-family:'Courier New', Courier, monospace;
-    overflow-y: scroll;
-    height: 90vh;
-    position: relative;
+    /* overflow-y: scroll;
+    position: relative; */
     background-color: transparent;
+    /* margin: 0 !important;
+    padding: 0 !important; */
+
 }
 
 .container::-webkit-scrollbar {
     display: none;
-  }
+}
   
   /* Hide scrollbar for IE, Edge add Firefox
   .scrollbar-hidden {
     -ms-overflow-style: none;
     scrollbar-width: none; /* Firefox */
 
+
+.navbar {
+  margin: 0;
+  padding: 0;
+}
+
 .card {
   border: none !important;
+  margin: 0!important;
+  padding: 0!important;
+  background-color: transparent !important;
 }
 
 .card-body {
   background-color: rgba(255,255,255,1);
   border: solid;
   border-color: black;
-  margin-bottom: 1rem;
   /* box-shadow: 10px 10px 20px black; */
+  margin: 0!important;
+  padding: 0!important;
+}
+
+.card1-body {
+  margin: 0;
+  padding: 0;
+  background-color: rgba(255,255,255,1);
 }
 
 #intro {
